로그인 화면 구현

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="me.tnfy10.firebase_chat_example">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
    <application
         android:label="firebase_chat_example"
         android:name="${applicationName}"
