스플래시 화면 구현, 회원가입 일부 구현

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,6 +63,7 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    namespace 'me.tnfy10.firebase_chat_example'
 }
 
 flutter {
