--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   get: ^4.6.5
   firebase_auth: ^3.9.0
   flutter_native_splash: ^2.2.9
+  firebase_app_check: ^0.0.7+2
 
 dev_dependencies:
   flutter_test:
