--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_auth: ^3.9.0
   flutter_native_splash: ^2.2.9
   firebase_app_check: ^0.0.7+2
+  cloud_firestore: ^3.4.9
 
 dev_dependencies:
   flutter_test:
