--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,9 @@ dependencies:
   get: ^4.6.5
   firebase_auth: ^3.9.0
   flutter_native_splash: ^2.2.9
-  firebase_app_check: ^0.0.7+2
   cloud_firestore: ^3.4.9
   persistent_bottom_nav_bar: ^5.0.2
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
