--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   shared_preferences: ^2.0.15
   uuid: ^3.0.6
   intl: ^0.17.0
+  firebase_storage: ^10.3.11
+  image_picker: ^0.8.6
+  path_provider: ^2.0.11
+  cached_network_image: ^3.2.2
 
 dev_dependencies:
   flutter_test:
