--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,19 +14,20 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.22.0
+  firebase_core: ^2.2.0
   get: ^4.6.5
-  firebase_auth: ^3.9.0
+  firebase_auth: ^4.1.2
   flutter_native_splash: ^2.2.9
-  cloud_firestore: ^3.4.9
+  cloud_firestore: ^4.0.5
   persistent_bottom_nav_bar: ^5.0.2
   shared_preferences: ^2.0.15
   uuid: ^3.0.6
   intl: ^0.17.0
-  firebase_storage: ^10.3.11
+  firebase_storage: ^11.0.5
   image_picker: ^0.8.6
-  path_provider: ^2.0.11
   cached_network_image: ^3.2.2
+  flutter_local_notifications: ^12.0.3
+  flutter_background_service: ^2.4.5
 
 dev_dependencies:
   flutter_test:
