--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cached_network_image: ^3.2.2
   flutter_local_notifications: ^12.0.3
   flutter_background_service: ^2.4.5
+  file_picker: ^5.2.2
 
 dev_dependencies:
   flutter_test:
