--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_local_notifications: ^12.0.3
   flutter_background_service: ^2.4.5
   file_picker: ^5.2.2
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
