--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,9 @@ dependencies:
   image_picker: ^0.8.6
   cached_network_image: ^3.2.2
   flutter_local_notifications: ^12.0.3
-  flutter_background_service: ^2.4.5
   file_picker: ^5.2.2
   path_provider: ^2.0.11
+  flutter_foreground_task: ^3.10.0
 
 dev_dependencies:
   flutter_test:
