--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,5 +49,11 @@
 		<true/>
 		<key>UIStatusBarHidden</key>
 		<false/>
+        <key>NSPhotoLibraryUsageDescription</key>
+        <string>test</string>
+        <key>NSCameraUsageDescription</key>
+        <string>test</string>
+        <key>NSMicrophoneUsageDescription</key>
+        <string>test</string>
 	</dict>
 </plist>
