--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   file_picker: ^5.2.2
   path_provider: ^2.0.11
   flutter_foreground_task: ^3.10.0
+  image_cropper: ^3.0.1
 
 dev_dependencies:
   flutter_test:
